fix(foxy-theme-overrides): increase padding for cart item details for better spacing

--- a/foxy-styles/foxy-theme-overrides.css
+++ b/foxy-styles/foxy-theme-overrides.css
@@ -713,7 +713,7 @@
     order: 2 !important;
     width: 50% !important;
     flex: 0 0 50% !important;
-    padding: 0 0 30px 35px !important;
+    padding: 0 0 80px 35px !important;
     border-left: none !important;
     border-top: none !important;
     position: sticky !important;
